[package]
name = "vssetup"
version = "0.1.0"
authors = [
    "Heath Stewart <heaths@outlook.com>",
]
description = """
Enumerates Microsoft Visual Studio setup instances.
"""
license = "MIT"
edition = "2018"
repository = "https://github.com/heaths/vssetup-rs"
exclude = [
    ".github",
    ".vscode",
]
categories = [
    "external-ffi-bindings",
    "os::windows-apis",
]
keywords = [
    "visual-studio",
]

[dependencies]
chrono = "0.4.19"
com = "0.3.0"
windows = "0.10.0"

[build-dependencies]
windows = "0.10.0"
