[package]
name = "vssetup"
version = "0.1.0"
authors = [
    "Heath Stewart <heaths@outlook.com>",
]
description = """
Enumerates Microsoft Visual Studio setup instances.
"""
license = "MIT"
edition = "2018"
repository = "https://github.com/heaths/vssetup-rs"
exclude = [
    ".github",
    ".vscode",
]
categories = [
    "external-ffi-bindings",
    "os::windows-apis",
]
keywords = [
    "visual-studio",
]

[dependencies]
chrono = "0.4.19"
com = "0.6.0"

[dependencies.windows]
version = "0.27.0"
features = [
    "std",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Time",
]
